// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LevelEndScreen.vue level end screen (failure) matches snapshot 1`] = `
<div
  class="modal"
  data-backdrop="static"
  data-keyboard="false"
  id="level-end-screen"
>
  <div
    class="modal-dialog modal-dialog-centered"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header"
      >
        <h2
          class="modal-title h5"
        >
          lost
        </h2>
      </div>
       
      <div
        class="modal-body"
      >
        <div
          class="text-center"
        >
          <img
            alt="0 Sterne"
            class="mb-3"
            src="/assets/levelend_stars_0.svg"
            style="height: 5.5rem;"
          />
        </div>
         
        <!---->
         
        <button
          aria-label="Close"
          class="btn btn-primary btn-block btn-lg"
          data-dismiss="modal"
          data-toggle="modal"
        >
          
                    new start
                
        </button>
         
        <hr
          class="my-3"
        />
         
        <button
          class="btn btn-primary btn-block btn-lg"
          data-dismiss="modal"
        >
          
                    back to level selection
                
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LevelEndScreen.vue level end screen (success) matches snapshot 1`] = `
<div
  class="modal"
  data-backdrop="static"
  data-keyboard="false"
  id="level-end-screen"
>
  <div
    class="modal-dialog modal-dialog-centered"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header"
      >
        <h2
          class="modal-title h5"
        >
          victory
        </h2>
      </div>
       
      <div
        class="modal-body"
      >
        <div
          class="text-center"
        >
          <img
            alt="3 Sterne"
            class="mb-3"
            src="/assets/levelend_stars_3.svg"
            style="height: 5.5rem;"
          />
        </div>
         
        <button
          aria-label="Close"
          class="btn btn-primary btn-block btn-lg mb-3"
          data-dismiss="modal"
          data-toggle="modal"
        >
          
                    next level
                
        </button>
         
        <button
          aria-label="Close"
          class="btn btn-primary btn-block"
          data-dismiss="modal"
          data-toggle="modal"
        >
          
                    new start
                
        </button>
         
        <hr
          class="my-3"
        />
         
        <button
          class="btn btn-primary btn-block btn-lg"
          data-dismiss="modal"
        >
          
                    back to level selection
                
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LevelEndScreen.vue level end screen (success, last level) matches snapshot 1`] = `
<div
  class="modal"
  data-backdrop="static"
  data-keyboard="false"
  id="level-end-screen"
>
  <div
    class="modal-dialog modal-dialog-centered"
  >
    <div
      class="modal-content"
    >
      <div
        class="modal-header"
      >
        <h2
          class="modal-title h5"
        >
          victory
        </h2>
      </div>
       
      <div
        class="modal-body"
      >
        <div
          class="text-center"
        >
          <img
            alt="3 Sterne"
            class="mb-3"
            src="/assets/levelend_stars_3.svg"
            style="height: 5.5rem;"
          />
        </div>
         
        <!---->
         
        <button
          aria-label="Close"
          class="btn btn-primary btn-block"
          data-dismiss="modal"
          data-toggle="modal"
        >
          
                    new start
                
        </button>
         
        <hr
          class="my-3"
        />
         
        <button
          class="btn btn-primary btn-block btn-lg"
          data-dismiss="modal"
        >
          
                    back to level selection
                
        </button>
      </div>
    </div>
  </div>
</div>
`;
